Traductor/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, LINE_COMMENT=40, MULTILINE_COMMENT=41, WHITESPACE=42, 
		CHAR=43, REAL=44, STRUCTIDENT=45, IDENT=46;
	public static final int
		RULE_start = 0, RULE_defs = 1, RULE_def = 2, RULE_params = 3, RULE_type = 4, 
		RULE_sentences = 5, RULE_sentence = 6, RULE_expressions = 7, RULE_expr = 8, 
		RULE_lExpr = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "defs", "def", "params", "type", "sentences", "sentence", "expressions", 
			"expr", "lExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "'{'", "'}'", "'struct'", "';'", "'var'", 
			"','", "'['", "']'", "'int'", "'float'", "'char'", "'if'", "'else'", 
			"'read'", "'while'", "'='", "'print'", "'printsp'", "'println'", "'return'", 
			"'cast'", "'<'", "'>'", "'.'", "'/'", "'*'", "'+'", "'-'", "'>='", "'<='", 
			"'=='", "'!='", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_CONSTANT", "LINE_COMMENT", "MULTILINE_COMMENT", 
			"WHITESPACE", "CHAR", "REAL", "STRUCTIDENT", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefsContext defs;
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((StartContext)_localctx).defs = defs();
			setState(21);
			match(EOF);
			((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).defs.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefContext def;
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
	}

	public final DefsContext defs() throws RecognitionException {
		DefsContext _localctx = new DefsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(24);
					((DefsContext)_localctx).def = def();
					_localctx.list.add(((DefsContext)_localctx).def.ast); 
					}
					} 
				}
				setState(31);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public ParamsContext params;
		public TypeContext type;
		public DefsContext defs;
		public SentencesContext sentences;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				((DefContext)_localctx).IDENT = match(IDENT);
				setState(33);
				match(T__0);
				setState(34);
				((DefContext)_localctx).params = params();
				setState(35);
				match(T__1);
				setState(36);
				match(T__2);
				setState(37);
				((DefContext)_localctx).type = type();
				setState(38);
				match(T__3);
				setState(39);
				((DefContext)_localctx).defs = defs();
				setState(40);
				((DefContext)_localctx).sentences = sentences();
				setState(41);
				match(T__4);
				((DefContext)_localctx).ast =  new FuncDefinition((((DefContext)_localctx).IDENT!=null?((DefContext)_localctx).IDENT.getText():null),((DefContext)_localctx).params.list,((DefContext)_localctx).defs.list,((DefContext)_localctx).sentences.list,((DefContext)_localctx).type.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((DefContext)_localctx).IDENT = match(IDENT);
				setState(45);
				match(T__0);
				setState(46);
				((DefContext)_localctx).params = params();
				setState(47);
				match(T__1);
				setState(48);
				match(T__3);
				setState(49);
				((DefContext)_localctx).defs = defs();
				setState(50);
				((DefContext)_localctx).sentences = sentences();
				setState(51);
				match(T__4);
				((DefContext)_localctx).ast =  new FuncDefinition((((DefContext)_localctx).IDENT!=null?((DefContext)_localctx).IDENT.getText():null),((DefContext)_localctx).params.list,((DefContext)_localctx).defs.list,((DefContext)_localctx).sentences.list,_localctx);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				match(T__5);
				setState(55);
				((DefContext)_localctx).type = type();
				setState(56);
				match(T__3);
				setState(57);
				((DefContext)_localctx).defs = defs();
				setState(58);
				match(T__4);
				setState(59);
				match(T__6);
				((DefContext)_localctx).ast =  new StructDefinition(((DefContext)_localctx).type.ast,((DefContext)_localctx).defs.list); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				match(T__7);
				setState(63);
				((DefContext)_localctx).IDENT = match(IDENT);
				setState(64);
				match(T__2);
				setState(65);
				((DefContext)_localctx).type = type();
				setState(66);
				match(T__6);
				((DefContext)_localctx).ast =  new VarDefinition(((DefContext)_localctx).IDENT,((DefContext)_localctx).type.ast); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				((DefContext)_localctx).IDENT = match(IDENT);
				setState(70);
				match(T__2);
				setState(71);
				((DefContext)_localctx).type = type();
				setState(72);
				match(T__6);
				((DefContext)_localctx).ast =  new Campo(((DefContext)_localctx).IDENT,((DefContext)_localctx).type.ast); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				((DefContext)_localctx).IDENT = match(IDENT);
				setState(76);
				match(T__2);
				setState(77);
				((DefContext)_localctx).type = type();
				((DefContext)_localctx).ast =  new VarDefinition(((DefContext)_localctx).IDENT,((DefContext)_localctx).type.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefContext p1;
		public DefContext pn;
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__7) | (1L << IDENT))) != 0)) {
				{
				{
				setState(82);
				((ParamsContext)_localctx).p1 = def();
				_localctx.list.add(((ParamsContext)_localctx).p1.ast);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(84);
					match(T__8);
					setState(85);
					((ParamsContext)_localctx).pn = def();
					_localctx.list.add(((ParamsContext)_localctx).pn.ast);
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public ExprContext expr;
		public TypeContext type;
		public Token STRUCTIDENT;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode STRUCTIDENT() { return getToken(GrammarParser.STRUCTIDENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(T__9);
				setState(99);
				((TypeContext)_localctx).expr = expr(0);
				setState(100);
				match(T__10);
				setState(101);
				((TypeContext)_localctx).type = type();
				((TypeContext)_localctx).ast =  new ArrayType(((TypeContext)_localctx).expr.ast,((TypeContext)_localctx).type.ast);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(T__11);
				((TypeContext)_localctx).ast =  new IntType();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				match(T__12);
				((TypeContext)_localctx).ast =  new RealType();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				match(T__13);
				((TypeContext)_localctx).ast =  new CharType();
				}
				break;
			case STRUCTIDENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				((TypeContext)_localctx).STRUCTIDENT = match(STRUCTIDENT);
				((TypeContext)_localctx).ast =  new StructType(((TypeContext)_localctx).STRUCTIDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencesContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenceContext sentence;
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << INT_CONSTANT) | (1L << CHAR) | (1L << REAL) | (1L << IDENT))) != 0)) {
				{
				{
				setState(114);
				((SentencesContext)_localctx).sentence = sentence();
				 _localctx.list.add(((SentencesContext)_localctx).sentence.ast); 
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Sentence ast;
		public ExprContext expr;
		public SentencesContext sentences;
		public SentencesContext ifSentences;
		public SentencesContext elseSentences;
		public Token IDENT;
		public LExprContext lExpr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<SentencesContext> sentences() {
			return getRuleContexts(SentencesContext.class);
		}
		public SentencesContext sentences(int i) {
			return getRuleContext(SentencesContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public LExprContext lExpr() {
			return getRuleContext(LExprContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentence);
		try {
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__14);
				setState(123);
				match(T__0);
				setState(124);
				((SentenceContext)_localctx).expr = expr(0);
				setState(125);
				match(T__1);
				setState(126);
				match(T__3);
				setState(127);
				((SentenceContext)_localctx).sentences = sentences();
				setState(128);
				match(T__4);
				((SentenceContext)_localctx).ast =  new If(((SentenceContext)_localctx).expr.ast,((SentenceContext)_localctx).sentences.list,new ArrayList<Sentence>());
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(T__14);
				setState(132);
				match(T__0);
				setState(133);
				((SentenceContext)_localctx).expr = expr(0);
				setState(134);
				match(T__1);
				setState(135);
				match(T__3);
				setState(136);
				((SentenceContext)_localctx).ifSentences = sentences();
				setState(137);
				match(T__4);
				setState(138);
				match(T__15);
				setState(139);
				match(T__3);
				setState(140);
				((SentenceContext)_localctx).elseSentences = sentences();
				setState(141);
				match(T__4);
				((SentenceContext)_localctx).ast =  new If(((SentenceContext)_localctx).expr.ast,((SentenceContext)_localctx).ifSentences.list,((SentenceContext)_localctx).elseSentences.list);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(T__16);
				setState(145);
				((SentenceContext)_localctx).expr = expr(0);
				setState(146);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Read(((SentenceContext)_localctx).expr.ast);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				match(T__17);
				setState(150);
				match(T__0);
				setState(151);
				((SentenceContext)_localctx).expr = expr(0);
				setState(152);
				match(T__1);
				setState(153);
				match(T__3);
				setState(154);
				((SentenceContext)_localctx).sentences = sentences();
				setState(155);
				match(T__4);
				((SentenceContext)_localctx).ast =  new While(((SentenceContext)_localctx).expr.ast,((SentenceContext)_localctx).sentences.list);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				expr(0);
				setState(159);
				match(T__18);
				setState(160);
				expr(0);
				setState(161);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Assignment(_localctx.expr(0).ast,_localctx.expr(1).ast);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(164);
				match(T__19);
				setState(165);
				((SentenceContext)_localctx).expr = expr(0);
				setState(166);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Print(((SentenceContext)_localctx).expr.ast,"");
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(169);
				match(T__20);
				setState(170);
				((SentenceContext)_localctx).expr = expr(0);
				setState(171);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Print(((SentenceContext)_localctx).expr.ast," ");
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(174);
				match(T__21);
				setState(175);
				((SentenceContext)_localctx).expr = expr(0);
				setState(176);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Print(((SentenceContext)_localctx).expr.ast,"\n");
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(179);
				match(T__22);
				setState(180);
				((SentenceContext)_localctx).expr = expr(0);
				setState(181);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Return(((SentenceContext)_localctx).expr.ast); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(184);
				match(T__22);
				setState(185);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Return(_localctx); 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(187);
				((SentenceContext)_localctx).IDENT = match(IDENT);
				setState(188);
				match(T__0);
				setState(189);
				((SentenceContext)_localctx).lExpr = lExpr();
				setState(190);
				match(T__1);
				setState(191);
				match(T__6);
				((SentenceContext)_localctx).ast =  new Function(((SentenceContext)_localctx).IDENT,((SentenceContext)_localctx).lExpr.list);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<Expression> list = new ArrayList<Expression>();
		public ExprContext expr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__23) | (1L << INT_CONSTANT) | (1L << CHAR) | (1L << REAL) | (1L << IDENT))) != 0)) {
				{
				{
				setState(196);
				((ExpressionsContext)_localctx).expr = expr(0);
				 _localctx.list.add(((ExpressionsContext)_localctx).expr.ast); 
				}
				}
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expression ast;
		public ExprContext e;
		public ExprContext left;
		public ExprContext expr;
		public TypeContext type;
		public Token REAL;
		public Token INT_CONSTANT;
		public Token IDENT;
		public LExprContext lExpr;
		public Token CHAR;
		public Token op;
		public ExprContext right;
		public Token id;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode REAL() { return getToken(GrammarParser.REAL, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public LExprContext lExpr() {
			return getRuleContext(LExprContext.class,0);
		}
		public TerminalNode CHAR() { return getToken(GrammarParser.CHAR, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(233);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(205);
				match(T__0);
				setState(206);
				((ExprContext)_localctx).expr = expr(0);
				setState(207);
				match(T__1);
				((ExprContext)_localctx).ast =  ((ExprContext)_localctx).expr.ast;
				}
				break;
			case 2:
				{
				setState(210);
				match(T__23);
				setState(211);
				match(T__24);
				setState(212);
				((ExprContext)_localctx).type = type();
				setState(213);
				match(T__25);
				setState(214);
				match(T__0);
				setState(215);
				((ExprContext)_localctx).expr = expr(0);
				setState(216);
				match(T__1);
				((ExprContext)_localctx).ast =  new Cast(((ExprContext)_localctx).type.ast,((ExprContext)_localctx).expr.ast); 
				}
				break;
			case 3:
				{
				setState(219);
				((ExprContext)_localctx).REAL = match(REAL);
				((ExprContext)_localctx).ast =  new RealConstant(((ExprContext)_localctx).REAL);
				}
				break;
			case 4:
				{
				setState(221);
				((ExprContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				((ExprContext)_localctx).ast =  new IntConstant(((ExprContext)_localctx).INT_CONSTANT);
				}
				break;
			case 5:
				{
				setState(223);
				((ExprContext)_localctx).IDENT = match(IDENT);
				setState(224);
				match(T__0);
				setState(225);
				((ExprContext)_localctx).lExpr = lExpr();
				setState(226);
				match(T__1);
				 ((ExprContext)_localctx).ast =  new FunctionExpression(((ExprContext)_localctx).IDENT,((ExprContext)_localctx).lExpr.list);
				}
				break;
			case 6:
				{
				setState(229);
				((ExprContext)_localctx).CHAR = match(CHAR);
				((ExprContext)_localctx).ast =  new CharConstant(((ExprContext)_localctx).CHAR);
				}
				break;
			case 7:
				{
				setState(231);
				((ExprContext)_localctx).IDENT = match(IDENT);
				((ExprContext)_localctx).ast =  new Variable(((ExprContext)_localctx).IDENT);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(272);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(270);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(235);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(236);
						((ExprContext)_localctx).op = _input.LT(1);
